fix: background grid class not showing correctly in dark/light mode

--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,18 @@ body {
   }
  
 }
+
+.bg-grid {
+  background-image:
+    linear-gradient(45deg, transparent 49%, #00000010 49%, #00000010 51%, transparent 51%),
+    linear-gradient(-45deg, transparent 49%, #00000010 49%, #00000010 51%, transparent 51%);
+  background-size: 40px 40px;
+  -webkit-mask-image: radial-gradient(ellipse 60% 60% at 50% 50%, #000 30%, transparent 70%);
+  mask-image: radial-gradient(ellipse 60% 60% at 50% 50%, #000 30%, transparent 70%);
+}
+
+.dark .bg-grid {
+  background-image:
+    linear-gradient(45deg, transparent 49%, #ffffff20 49%, #ffffff20 51%, transparent 51%),
+    linear-gradient(-45deg, transparent 49%, #ffffff20 49%, #ffffff20 51%, transparent 51%);
+}
